# BOFUS

./: .gitignore  README.md  a.sh  acquisition.py  autobounds.py  baseline Kundu.ipynb  baseline Shilton.ipynb  baseline Vellanky.ipynb  baseline Vien.ipynb  baseline Wycoff.ipynb  benchmark.txt  botorch.ipynb  brachistocrone.ipynb  functional.ipynb  goldstein.ipynb  gp.py  mh.py  mixedlm.py  mnist.ipynb  padding.ipynb  pendulum.ipynb  plot.ipynb  plots.py  pyproject.toml  run.py  run.sh  run_kundu.py  run_shilton.py  run_vellanky.py  run_vien.py  run_wycoff.py  summary.py  sweep.sh  sweep_all.sh  sweep_goldstein.sh  sweep_lunar.sh  sweep_push.sh  sweep_rover.sh  test_functions.ipynb  vis.ipynb  (+1 more)
configs/: goldstein.yaml  lunar.yaml  push.yaml  rover.yaml
src/: acquisition.py  gp.py  kernels.py  rkhs.py  utils.py
src/targets/: __init__.py  brachistochrone.py  gymnasium.py  mnist.py  neuralnetworks.py  pinwheel.py
src/test_functions/: __init__.py  base.py  lunar_lander.py  push.py  rover.py  virtual_library.py
