[project]
name = "bofus"
version = "0.1.0"
description = "Baysian Optimization on Function Spaces"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "equinox>=0.13.6",
    "gymnasium>=1.2.3",
    "jax>=0.9.2",
    "jaxtyping>=0.3.9",
    "joblib>=1.5.3",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "optax>=0.2.8",
    "pandas>=3.0.2",
    "scipy>=1.17.1",
    "statsmodels>=0.14.6",
    "torchvision>=0.26.0",
    "tqdm>=4.67.3",
]
